main-application/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-apps-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-apps
  template:
    metadata:
      labels:
        app: main-apps
    spec:
      volumes:
        - name: hash-volume
          persistentVolumeClaim:
              claimName: hash-claim
      containers:
        - name: main-app-writer
          image: partanenjoonas/main-app-writer:1.10.3
          volumeMounts:
            - mountPath: /usr/src/app/files
              name: hash-volume
        - name: main-app-reader
          image: partanenjoonas/main-app-reader:1.11.1
          volumeMounts:
            - mountPath: /usr/src/app/files
              name: hash-volume
