main-application/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-apps-svc
  namespace: main-namespace
spec:
  type: NodePort
  selector:
    app: main-apps
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
