main-application/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: main-apps-svc
          servicePort: 2345
      - path: /pingpong
        backend:
          serviceName: pingpong-app-svc
          servicePort: 2346
      - path: /todoapp
        backend:
          serviceName: todo-app-svc
          servicePort: 2347
